packages/tree-sitter-typlet/test/corpus/expression.txt
============================================
Binary Operation
============================================

1 + 2
"hi" + "str" * n
2 * x <= k

---

(program
  (expression_statement
    (binary_operation (integer) (integer))
  )
  (expression_statement
    (binary_operation
      (string)
      (binary_operation (string) (name (identifier)))
    )
  )
  (expression_statement
    (binary_operation
      (binary_operation (integer) (name (identifier)))
      (name (identifier))
    )
  ))

============================================
If Expression
============================================

if a then b else c
if a { 
  b
} else {
  c
}
(
  if a then
    if b then c
    else d
  else e
)

---

(program
  (expression_statement
    (if_expression
      (name (identifier))
      (name (identifier))
      (name (identifier))
    )
  )
  (expression_statement
    (if_expression
      (name (identifier))
      (block (expression_statement (name (identifier))))
      (block (expression_statement (name (identifier))))
    )
  )
  (expression_statement
    (if_expression
      (name (identifier))
      (if_expression
        (name (identifier))
        (name (identifier))
        (name (identifier))
      )
      (name (identifier))
    )
  ))
