packages/tree-sitter-typlet/test/corpus/statement.txt
============================================
Use
============================================

use "node:fs" as fs
use "./file.typlet": { A }
use "./file.typlet": { A, }
use "./file.typlet": { A, B, }
use "./file.typlet": { A, B, C }

---

(program
  (use_statement (string) (identifier))
  (use_statement
    (string)
    (use_part_list
      (use_part (identifier))
    )
  )
  (use_statement
    (string)
    (use_part_list
      (use_part (identifier))
    )
  )
  (use_statement
    (string)
    (use_part_list
      (use_part (identifier))
      (use_part (identifier))
    )
  )
  (use_statement
    (string)
    (use_part_list
      (use_part (identifier))
      (use_part (identifier))
      (use_part (identifier))
    )
  ))
